--- a/guarantor/templates/_guarantor_bank_income_info.html
+++ b/guarantor/templates/_guarantor_bank_income_info.html
@@ -17,7 +17,7 @@
                         درآمد ماهیانه
                     </div>
                     <div class="col-xs-3">
-                        <input type="number" class="form-control" name="income"
+                        <input role="amount" class="form-control" name="income"
                                value="{{ customer.bank_income_info.income }}"
                                required
                                data-validation-required-message="وارد کردن این فیلد الزامی است"
