--- a/start_grant/templates/_bank_income_info.html
+++ b/start_grant/templates/_bank_income_info.html
@@ -33,7 +33,7 @@
                         درآمد ماهیانه
                     </div>
                     <div class="col-xs-3">
-                        <input type="number" class="form-control" name="income"
+                        <input role="amount" class="form-control" name="income"
                                value="{{ customer_info.bank_income_info.income }}"
                                required
                                data-validation-required-message="وارد کردن این فیلد الزامی است"
@@ -48,7 +48,7 @@
                         <div class="row">
                             {% for vasighe in vasighe_types %}
                                 <div class="col-xs-3">
-                                    <input type="checkbox" name="vasighe_types" value="{{ vasighe.id }}">
+                                    <input type="checkbox" id="{{ vasighe.name }}" name="vasighe_types" value="{{ vasighe.id }}">
                                     {{ vasighe.local_name }}
                                     </input>
                                 </div>
@@ -56,44 +56,46 @@
                         </div>
                     </div>
                 </div>
-                <div class="row">
-                    <div class="col-xs-5" style="font-weight: bold;">
-                        سند ملکی
+                <div id="sanad-melki">
+                    <div class="row">
+                        <div class="col-xs-5" style="font-weight: bold;">
+                            سند ملکی
+                        </div>
                     </div>
-                </div>
-                <div class="row">
-                    <div class="col-xs-2">
-                        شماره سند
-                    </div>
-                    <div class="col-xs-3">
-                        <input type="number" class="form-control" name="sanad_no"
-                               value="{{ customer_request.vasighe_information.sanad_melki_info.sanad_no }}"/>
-                    </div>
-                    <div class="col-xs-2">
-                        نام مالک
-                    </div>
-                    <div class="col-xs-3">
-                        <input type="text" class="form-control" name="owner_name"
-                               value="{{ customer_request.vasighe_information.sanad_melki_info.owner_name }}"
-                                />
-                    </div>
+                    <div class="row">
+                        <div class="col-xs-2">
+                            شماره سند
+                        </div>
+                        <div class="col-xs-3">
+                            <input type="number" class="form-control" name="sanad_no"
+                                   value="{{ customer_request.vasighe_information.sanad_melki_info.sanad_no }}"/>
+                        </div>
+                        <div class="col-xs-2">
+                            نام مالک
+                        </div>
+                        <div class="col-xs-3">
+                            <input type="text" class="form-control" name="owner_name"
+                                   value="{{ customer_request.vasighe_information.sanad_melki_info.owner_name }}"
+                                    />
+                        </div>
 
-                </div>
-                <div class="row">
-                    <div class="col-xs-2">
-                        ارزش فعلی
                     </div>
-                    <div class="col-xs-3">
-                        <input type="number" name="current_value" class="form-control"
-                               value="{{ customer_request.vasighe_information.sanad_melki_info.current_value }}"
-                                />
-                    </div>
-                    <div class="col-xs-2">
-                        آدرس
-                    </div>
-                    <div class="col-xs-3">
-                        <input type="text" name="address" class="form-control"
-                               value="{{ customer_request.vasighe_information.sanad_melki_info.address }}"/>
+                    <div class="row">
+                        <div class="col-xs-2">
+                            ارزش فعلی
+                        </div>
+                        <div class="col-xs-3">
+                            <input type="number" name="current_value" class="form-control"
+                                   value="{{ customer_request.vasighe_information.sanad_melki_info.current_value }}"
+                                    />
+                        </div>
+                        <div class="col-xs-2">
+                            آدرس
+                        </div>
+                        <div class="col-xs-3">
+                            <input type="text" name="address" class="form-control"
+                                   value="{{ customer_request.vasighe_information.sanad_melki_info.address }}"/>
+                        </div>
                     </div>
                 </div>
             </div>
