--- a/start_grant/templates/submit_data.html
+++ b/start_grant/templates/submit_data.html
@@ -211,11 +211,42 @@
 
             }
         }
+
+        function handleSanadMelkicontainer(state) {
+            if (state) {
+                $('#sanad-melki').show();
+            }
+            else {
+                $('#sanad-melki').hide();
+            }
+        }
+
         $(window).ready(function () {
+
+            $("input[role=amount]").maskMoney({
+                allowZero: true, // Prevent users from inputing zero
+                allowNegative: false, // Prevent users from inputing negative values
+                defaultZero: true, // when the user enters the field, it sets a default mask using zero
+                thousands: ',', // The thousands separator
+                decimal: '.', // The decimal separator
+                precision: 0, // How many decimal places are allowed
+                affixesStay: true, // set if the symbol will stay in the field after the user exits the field.
+                symbolPosition: 'left' // use this setting to position the symbol at the left or right side of the value. default 'left'
+            }); //
+
             check_for_showing_next_level();
             $('#birth_date,#birth_date_span').persianDatepicker();
             $('#bc_place').select2();
             $('#birth_place').select2();
+            var state = $('#melki').prop('checked');
+            handleSanadMelkicontainer(state);
+
+
+            $('#melki').change(function () {
+                var state = $(this).prop('checked');
+                handleSanadMelkicontainer(state);
+            });
+
             $('.rose-progress-bar-cell').click(function () {
                 var cell = $(this)
                 var container = $('#' + $(this).attr('id') + '_container');
