--- a/templates/base_dashboard.html
+++ b/templates/base_dashboard.html
@@ -162,6 +162,8 @@
 <script src="{% static "UI/alertBar/alertBar.js" %}"></script>
 <script src="{% static "bootstrap/js/bootstrap.min.js" %}"></script>
 <script type="text/javascript" src="{% static 'js/jqBootstrapValidation.js' %}"></script>
+<script type="text/javascript" src="{% static 'js/jquery.maskMoney.js' %}"></script>
+{#<script type="text/javascript" src="{% static 'js/jquery.maskMoney.min.js' %}"></script>#}
 <script>
     $(window).ready(function () {
         $('#content').css({'height': $(window).height()});
