sanad melki value changed to support separator

--- a/start_grant/templates/_bank_income_info.html
+++ b/start_grant/templates/_bank_income_info.html
@@ -85,7 +85,7 @@
                             ارزش فعلی
                         </div>
                         <div class="col-xs-3">
-                            <input type="number" name="current_value" class="form-control"
+                            <input role="amount" name="current_value" class="form-control"
                                    value="{{ customer_request.vasighe_information.sanad_melki_info.current_value }}"
                                     />
                         </div>
