--- a/start_grant/templates/_enterprise_asset_info.html
+++ b/start_grant/templates/_enterprise_asset_info.html
@@ -8,7 +8,7 @@
 <form id="asset_info_form" name="asset_info_form" method="post" action="{% url 'customer:enterprise_asset_info' %}"
       novalidate>
 {% csrf_token %}
-<input type="hidden" name="company_id" value="{{ customer_info.pk }}">
+<input type="hidden" name="company_id" value="{{ customer_request.cif }}">
 
 <div class="control-group">
 <div class="row">
