--- a/start_grant/templates/_customer_info.html
+++ b/start_grant/templates/_customer_info.html
@@ -58,7 +58,7 @@
                     </div>
                     <div class="col-xs-3">
                         <input type="text" class="form-control" name="father_name"
-                               value="{{ customer_info.father_name }}""
+                               value="{{ customer_info.father_name }}"
                         required
                         data-validation-required-message="وارد کردن این فیلد الزامی است"
                         />
