birth info changed to combo box

--- a/guarantor/templates/_guarantor_customer_info.html
+++ b/guarantor/templates/_guarantor_customer_info.html
@@ -9,8 +9,8 @@
               action="{% url 'customer:customer_info' %}" novalidate>
             {% csrf_token %}
 
-            <input type="hidden" name="type" value="{{ customer_type }}" />
-            <input type="hidden" name="national_number" value="{{ customer_id }}" />
+            <input type="hidden" name="type" value="{{ customer_type }}"/>
+            <input type="hidden" name="national_number" value="{{ customer_id }}"/>
 
             <div class="control-group">
                 <div class="row controls">
@@ -59,10 +59,10 @@
                     </div>
                     <div class="col-xs-3">
                         <input type="text" class="form-control" name="father_name"
-                               value="{{ customer.father_name }}""
-                        required
-                        data-validation-required-message="وارد کردن این فیلد الزامی است"
-                        />
+                               value="{{ customer.father_name }}"
+                               required
+                               data-validation-required-message="وارد کردن این فیلد الزامی است"
+                                />
                     </div>
 
                     <div class="col-xs-2">
@@ -91,9 +91,12 @@
                         محل صدور شناسنامه
                     </div>
                     <div class="col-xs-3">
-                        <input type="text" class="form-control" value="{{ customer.bc_place }}" name="bc_place"
-                               required
-                               data-validation-required-message="وارد کردن این فیلد الزامی است"/>
+                        <select id="bc_place" name="bc_place_id" value="{{ customer_info.bc_place.id }}"
+                                style="width: 100%; padding-bottom:10px; ">
+                            {% for town in all_towns %}
+                                <option value="{{ town.id }}">{{ town.local_name }}</option>
+                            {% endfor %}
+                        </select>
                     </div>
 
                     <div class="col-xs-2">
@@ -111,10 +114,12 @@
                         محل تولد
                     </div>
                     <div class="col-xs-3">
-                        <input type="text" class="form-control" value="{{ customer.birth_place }}"
-                               name="birth_place"
-                               required
-                               data-validation-required-message="وارد کردن این فیلد الزامی است"/>
+                        <select id="birth_place" name="birth_place_id" value="{{ customer.birth_place.id }}"
+                                style="width: 100%; padding-bottom:10px; ">
+                            {% for town in all_towns %}
+                                <option value="{{ town.id }}">{{ town.local_name }}</option>
+                            {% endfor %}
+                        </select>
                     </div>
                 </div>
             </div>
